Updating publishing account

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	"description": "Allows acquisition of the .NET Core runtime specifically for VSCode extension authors.",
 	"icon": "images/dotnetIcon.png",
 	"version": "0.1.0",
-	"publisher": "ms-azuretools",
+	"publisher": "ms-dotnettools",
 	"engines": {
 		"vscode": "^1.41.0"
 	},
