--- a/sample/package.json
+++ b/sample/package.json
@@ -8,7 +8,7 @@
 	},
 	"license": "MIT",
 	"version": "0.0.1",
-	"publisher": "ms-azuretools",
+	"publisher": "ms-dotnettools",
 	"engines": {
 		"vscode": "^1.41.0"
 	},
@@ -53,7 +53,7 @@
 		]
 	},
 	"scripts": {
-		"vscode:prepublish": "npm run compile",
+		"vscode:prepublish": "npm install && npm run compile",
 		"compile": "npm run clean && tsc -p ./",
 		"watch": "npm run clean && tsc -watch -p ./",
 		"test": "npm run compile && node ./node_modules/vscode/bin/test",
