Differentiating between script error and offline error in acquisition

--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -39,6 +39,7 @@
 		"chai": "^4.2.0",
 		"diff": ">=3.5.0",
 		"glob": "^7.1.5",
+		"is-online": "^8.2.1",
 		"mocha": "^7.0.0",
 		"open": "^7.0.2",
 		"rimraf": "2.6.3",
