--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -40,6 +40,7 @@
 		"is-online": "^8.2.1",
 		"mocha": "^7.0.0",
 		"open": "^7.0.2",
+		"p-retry": "^4.2.0",
 		"request": "^2.88.0",
 		"request-promise-native": "^1.0.8",
 		"rimraf": "2.6.3",
