Adding configuration option to use existing .NET installation

--- a/package.json
+++ b/package.json
@@ -55,6 +55,17 @@
 					"type": "number",
 					"default": 120,
 					"description": "Timeout for installing .NET in seconds."
+				},
+				"dotnetAcquisitionExtension.existingDotnetPath": {
+					"type": {
+						"version": "string",
+						"path": "string"
+					},
+					"default": {
+						"version": "all",
+						"path": "C:\\Program Files\\dotnet"
+					},
+					"description": "File Path to an existing installation of .NET."
 				}
 			}
 		}
