--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -29,24 +29,25 @@
 		"webpack": "webpack --mode development"
 	},
 	"dependencies": {
-		"child_process": "^1.0.2",
-		"vscode-dotnet-runtime-library": "file:../vscode-dotnet-runtime-library",
 		"@types/chai": "^4.2.7",
 		"@types/mocha": "5.2.6",
 		"@types/node": "12.0.0",
 		"@types/rimraf": "2.0.2",
 		"@types/vscode": "^1.41.0",
 		"chai": "^4.2.0",
+		"child_process": "^1.0.2",
 		"diff": ">=3.5.0",
 		"glob": "^7.1.5",
+		"hmac-drbg": "^1.0.1",
 		"is-online": "^8.2.1",
 		"mocha": "^7.0.0",
 		"open": "^7.0.2",
 		"rimraf": "2.6.3",
 		"shelljs": "^0.8.3",
-		"tslint": "^5.20.1",
 		"ts-loader": "^6.2.1",
+		"tslint": "^5.20.1",
 		"typescript": "3.4.5",
+		"vscode-dotnet-runtime-library": "file:../vscode-dotnet-runtime-library",
 		"vscode-test": "^1.3.0",
 		"webpack": "^4.41.5",
 		"webpack-cli": "^3.3.10"
