--- a/sample/package.json
+++ b/sample/package.json
@@ -67,9 +67,9 @@
 		"@types/node": "12.0.0",
 		"@types/rimraf": "2.0.2",
 		"@types/vscode": "^1.41.0",
+		"mocha": "^8.1.3",
 		"rimraf": "2.6.3",
 		"tslint": "5.16.0",
-		"typescript": "3.4.5",
-		"mocha": "^7.0.0"
+		"typescript": "3.4.5"
 	}
 }
