--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -30,7 +30,7 @@
 	},
 	"dependencies": {
 		"@types/chai": "^4.2.7",
-		"@types/mocha": "5.2.6",
+		"@types/mocha": "^8.0.3",
 		"@types/node": "12.0.0",
 		"@types/rimraf": "2.0.2",
 		"@types/vscode": "^1.41.0",
