--- a/sample/package.json
+++ b/sample/package.json
@@ -63,7 +63,7 @@
 		"vscode-dotnet-runtime-library": "file:../vscode-dotnet-runtime-library"
 	},
 	"devDependencies": {
-		"@types/mocha": "5.2.6",
+		"@types/mocha": "^8.0.3",
 		"@types/node": "12.0.0",
 		"@types/rimraf": "2.0.2",
 		"@types/vscode": "^1.41.0",
