--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 	},
 	"devDependencies": {
 		"copy-webpack-plugin": "^6.1.1",
+		"eol": "^0.9.1",
 		"ts-loader": "^6.2.1",
 		"typescript": "3.4.5",
 		"webpack": "^4.41.5",
