--- a/package.json
+++ b/package.json
@@ -9,75 +9,8 @@
 	},
 	"license": "MIT",
 	"author": "Microsoft Corporation",
-	"displayName": ".NET Install Tool for Extension Authors",
-	"description": "Allows acquisition of the .NET Core runtime specifically for VS Code extension authors.",
-	"icon": "images/dotnetIcon.png",
-	"version": "1.0.0",
-	"publisher": "ms-dotnettools",
-	"engines": {
-		"vscode": "^1.41.0"
-	},
-	"categories": [
-		"Other"
-	],
-	"keywords": [
-		".NET",
-		".NET Core",
-		"dotnet",
-		"Extension Authoring"
-	],
-	"activationEvents": [
-		"onCommand:dotnet.acquire",
-		"onCommand:dotnet.uninstallAll",
-		"onCommand:dotnet.showAcquisitionLog",
-		"onCommand:dotnet.ensureDotnetDependencies",
-		"onCommand:dotnet.reportIssue"
-	],
-	"main": "./dist/extension.js",
-	"contributes": {
-		"commands": [
-			{
-				"command": "dotnet.reportIssue",
-				"title": "Report an issue with the .NET Install Tool for Extension Authors.",
-				"category": ".NET Install Tool"
-			}
-		],
-		"configuration": {
-			"title": ".NET Install Tool",
-			"properties": {
-				"dotnetAcquisitionExtension.enableTelemetry": {
-					"type": "boolean",
-					"default": true,
-					"description": "Enable Telemetry for the .NET install tool."
-				},
-				"dotnetAcquisitionExtension.installTimeoutValue": {
-					"type": "number",
-					"default": 120,
-					"description": "Timeout for installing .NET in seconds."
-				},
-				"dotnetAcquisitionExtension.existingDotnetPath": {
-					"type": "array",
-					"description": "File Path to an existing installation of .NET."
-				}
-			}
-		}
-	},
 	"scripts": {
-		"vscode:prepublish": "npm run compile-all && npm install && webpack --mode production",
-		"compile-all": "build.cmd"
-	},
-	"dependencies": {
-		"es-abstract": "^1.18.0-next.1",
-		"p-retry": "^4.2.0",
-		"vscode-dotnet-runtime-extension": "file:./vscode-dotnet-runtime-extension"
-	},
-	"devDependencies": {
-		"copy-webpack-plugin": "^6.1.1",
-		"eol": "^0.9.1",
-		"ts-loader": "^6.2.1",
-		"typescript": "3.4.5",
-		"webpack": "^4.41.5",
-		"webpack-cli": "^3.3.10",
-		"yargs-parser": "^20.2.0"
+		"compile-all": "build.cmd",
+		"lint": "tslint -c tslint.json 'vscode-dotnet-runtime-library/src/**/*.ts' 'vscode-dotnet-runtime-extension/src/**/*.ts' 'vscode-dotnet-sdk-extension/src/**/*.ts'"
 	}
 }
