--- a/vscode-dotnet-runtime-extension/.vscode/launch.json
+++ b/vscode-dotnet-runtime-extension/.vscode/launch.json
@@ -5,7 +5,7 @@
 {
 	"version": "0.2.0",
 	"configurations": [{
-			"name": "Run Acquisition Extension",
+			"name": "Run .NET Runtime Acquisition Extension",
 			"type": "extensionHost",
 			"request": "launch",
 			"runtimeExecutable": "${execPath}",
@@ -18,7 +18,7 @@
 			"preLaunchTask": "compile-all"
 		},
 		{
-			"name": "Extension Acquisition Functional Tests",
+			"name": ".NET Runtime Extension Functional Tests",
 			"type": "extensionHost",
 			"request": "launch",
 			"runtimeExecutable": "${execPath}",
