--- a/vscode-dotnet-sdk-extension/tsconfig.json
+++ b/vscode-dotnet-sdk-extension/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"module": "commonjs",
 		"target": "es6",
-		"outDir": "out",
+		"outDir": "dist",
 		"lib": [
 			"es6"
 		],
@@ -13,6 +13,6 @@
 	"exclude": [
 		"node_modules",
 		".vscode-test",
-		"out"
+		"dist"
 	]
 }
