--- a/vscode-dotnet-runtime-extension/.vscode/launch.json
+++ b/vscode-dotnet-runtime-extension/.vscode/launch.json
@@ -13,7 +13,7 @@
 				"--extensionDevelopmentPath=${workspaceFolder}"
 			],
 			"outFiles": [
-				"${workspaceFolder}/out/**/*.js"
+				"${workspaceFolder}/dist/**/*.js"
 			],
 			"preLaunchTask": "compile-all"
 		},
@@ -24,10 +24,10 @@
 			"runtimeExecutable": "${execPath}",
 			"args": [
 				"--extensionDevelopmentPath=${workspaceFolder}",
-				"--extensionTestsPath=${workspaceFolder}/out/test/functional"
+				"--extensionTestsPath=${workspaceFolder}/dist/test/functional"
 			],
 			"outFiles": [
-				"${workspaceFolder}/out/test/**/*.js"
+				"${workspaceFolder}/dist/test/**/*.js"
 			],
 			"internalConsoleOptions": "openOnSessionStart",
 			"preLaunchTask": "compile-all"
