--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -34,6 +34,7 @@
 		"onCommand:dotnet.reportIssue"
 	],
 	"main": "./dist/extension.js",
+	"types": "./index.d.ts",
 	"contributes": {
 		"commands": [
 			{
@@ -73,11 +74,6 @@
 		"webpack": "webpack --mode development"
 	},
 	"dependencies": {
-		"@types/chai": "^4.2.7",
-		"@types/mocha": "^8.0.3",
-		"@types/node": "12.0.0",
-		"@types/rimraf": "2.0.2",
-		"@types/vscode": "^1.41.0",
 		"chai": "^4.2.0",
 		"child_process": "^1.0.2",
 		"diff": ">=3.5.0",
@@ -95,6 +91,11 @@
 		"vscode-test": "^1.3.0"
 	},
 	"devDependencies": {
+		"@types/vscode": "^1.41.0",
+		"@types/chai": "^4.2.7",
+		"@types/mocha": "^8.0.3",
+		"@types/node": "12.0.0",
+		"@types/rimraf": "2.0.2",
 		"copy-webpack-plugin": "^6.1.1",
 		"webpack": "^4.41.5",
 		"webpack-cli": "^3.3.10"
