Updating SDK extension tests

--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -34,7 +34,7 @@
 		"onCommand:dotnet.reportIssue"
 	],
 	"main": "./dist/extension.js",
-	"types": "./index.d.ts",
+	"types": "./dist/extension.d.ts",
 	"contributes": {
 		"commands": [
 			{
