--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -39,6 +39,7 @@
 		"diff": ">=3.5.0",
 		"eol": "^0.9.1",
 		"es-abstract": "^1.18.0-next.1",
+		"fsevents": "^2.1.2",
 		"is-online": "^8.2.1",
 		"mocha": "^8.1.3",
 		"open": "^7.0.2",
@@ -51,5 +52,8 @@
 		"typescript": "3.4.5",
 		"vscode-extension-telemetry": "^0.1.4",
 		"vscode-test": "^1.3.0"
+	},
+	"optionalDependencies": {
+		"fsevents": "^2.1.2"
 	}
 }
