Renaming SDK extension to .NET Education Bundle SDK Install Tool

--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -9,7 +9,7 @@
 	},
 	"license": "MIT",
 	"author": "Microsoft Corporation",
-	"displayName": ".NET SDK Install Tool",
+	"displayName": ".NET Education Bundle SDK Install Tool",
 	"description": "Allows acquisition of the .NET SDK.",
 	"icon": "images/dotnetIcon.png",
 	"version": "0.0.1",
@@ -38,27 +38,17 @@
 		"commands": [
 			{
 				"command": "dotnet-sdk.reportIssue",
-				"title": "Report an issue with the .NET SDK Install Tool.",
-				"category": ".NET SDK Install Tool"
-			},
-			{
-				"command": "dotnet-sdk.acquire",
-				"title": "Install the .NET SDK.",
-				"category": ".NET SDK Install Tool"
-			},
-			{
-				"command": "dotnet-sdk.uninstallAll",
-				"title": "Uninstall all VS Code copies of .NET SDK.",
-				"category": ".NET SDK Install Tool"
+				"title": "Report an issue with the .NET Education Bundle SDK Install Tool.",
+				"category": ".NET Education Bundle SDK Install Tool"
 			}
 		],
 		"configuration": {
-			"title": ".NET SDK Install Tool",
+			"title": ".NET Education Bundle SDK Install Tool",
 			"properties": {
 				"dotnetSDKAcquisitionExtension.enableTelemetry": {
 					"type": "boolean",
 					"default": true,
-					"description": "Enable Telemetry for the .NET SDK install tool."
+					"description": "Enable Telemetry for the .NET Education Bundle SDK Install Tool."
 				},
 				"dotnetSDKAcquisitionExtension.installTimeoutValue": {
 					"type": "number",
