--- a/vscode-dotnet-sdk-extension/tsconfig.json
+++ b/vscode-dotnet-sdk-extension/tsconfig.json
@@ -8,6 +8,7 @@
 		],
 		"sourceMap": true,
 		"rootDir": "src",
+		"declaration": true,
 		"strict": true   /* enable all strict type-checking options */
 	},
 	"exclude": [
