--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -11,6 +11,7 @@
 	"author": "Microsoft Corporation",
 	"displayName": ".NET Install Tool for Extension Authors",
 	"description": "Allows acquisition of the .NET runtime specifically for VS Code extension authors.",
+	"appInsightsKey": "02dc18e0-7494-43b2-b2a3-18ada5fcb522",
 	"icon": "images/dotnetIcon.png",
 	"version": "1.0.0",
 	"publisher": "ms-dotnettools",
