--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -97,8 +97,8 @@
 		"@types/node": "12.0.0",
 		"@types/rimraf": "2.0.2",
 		"@types/vscode": "^1.41.0",
-		"copy-webpack-plugin": "^6.1.1",
-		"webpack": "^4.41.5",
-		"webpack-cli": "^3.3.10"
+		"copy-webpack-plugin": "7.0.0",
+		"webpack": "5.23.0",
+		"webpack-cli": "4.5.0"
 	}
 }
