--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -95,7 +95,7 @@
 	},
 	"devDependencies": {
 		"copy-webpack-plugin": "^6.1.1",
-		"webpack": "^4.41.5",
-		"webpack-cli": "^3.3.10"
+		"webpack": "5.23.0",
+		"webpack-cli": "4.5.0"
 	}
 }
