--- a/vscode-dotnet-uninstall-library/package.json
+++ b/vscode-dotnet-uninstall-library/package.json
@@ -22,7 +22,7 @@
 		"ts-loader": "^6.2.1"
 	},
 	"devDependencies": {
-		"webpack": "^4.41.5",
-		"webpack-cli": "^3.3.10"
+		"webpack": "5.23.0",
+		"webpack-cli": "4.5.0"
 	}
 }
