Adding SDK check acquisition status command

--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -30,6 +30,7 @@
 	],
 	"activationEvents": [
 		"onCommand:dotnet-sdk.acquire",
+		"onCommand:dotnet-sdk.acquireStatus",
 		"onCommand:dotnet-sdk.uninstallAll",
 		"onCommand:dotnet-sdk.showAcquisitionLog",
 		"onCommand:dotnet-sdk.reportIssue"
