--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -79,11 +79,13 @@
 	},
 	"dependencies": {
 		"@types/chai": "^4.2.7",
+		"@types/chai-as-promised": "^7.1.2",
 		"@types/mocha": "^8.0.3",
 		"@types/node": "12.0.0",
 		"@types/rimraf": "2.0.2",
 		"@types/vscode": "^1.41.0",
 		"chai": "^4.2.0",
+		"chai-as-promised": "^7.1.1",
 		"child_process": "^1.0.2",
 		"diff": ">=3.5.0",
 		"glob": "^7.1.5",
