--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -35,6 +35,7 @@
 	},
 	"activationEvents": [
 		"onCommand:dotnet.acquire",
+		"onCommand:dotnet.acquireStatus",
 		"onCommand:dotnet.uninstallAll",
 		"onCommand:dotnet.showAcquisitionLog",
 		"onCommand:dotnet.ensureDotnetDependencies",
