--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ install.*
 *.vsix
 vscode-dotnet-runtime-library/install scripts/dotnet-install.*
 */images/*
+vscode-dotnet-runtime-extension/LICENSE.txt
+vscode-dotnet-sdk-extension/LICENSE.txt
