--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -8,7 +8,7 @@
 	},
 	"license": "MIT",
 	"engines": {
-		"vscode": "^1.41.0"
+		"vscode": "^1.62.0"
 	},
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
@@ -21,38 +21,38 @@
 		"clean": "rimraf dist"
 	},
 	"devDependencies": {
-		"@types/chai": "^4.2.7",
-		"glob": "^7.1.5"
+		"@types/chai": "^4.2.22",
+		"glob": "^7.2.0"
 	},
 	"dependencies": {
-		"@types/chai-as-promised": "^7.1.2",
-		"@types/mocha": "^8.0.3",
-		"@types/node": "12.0.0",
-		"@types/request-promise-native": "^1.0.17",
-		"@types/rimraf": "2.0.2",
-		"@types/semver": "^6.2.0",
-		"@types/shelljs": "0.8.3",
-		"@types/vscode": "^1.41.0",
-		"chai": "^4.2.0",
+		"@types/chai-as-promised": "^7.1.4",
+		"@types/mocha": "^9.0.0",
+		"@types/node": "16.11.7",
+		"@types/request-promise-native": "^1.0.18",
+		"@types/rimraf": "3.0.2",
+		"@types/semver": "^7.3.9",
+		"@types/shelljs": "0.8.9",
+		"@types/vscode": "^1.62.0",
+		"chai": "^4.3.4",
 		"chai-as-promised": "^7.1.1",
-		"diff": ">=3.5.0",
+		"diff": ">=5.0.0",
 		"eol": "^0.9.1",
-		"es-abstract": "^1.18.0-next.1",
-		"fsevents": "^2.1.2",
-		"is-online": "^8.2.1",
-		"mocha": "^8.1.3",
-		"open": "^7.0.2",
-		"p-retry": "^4.2.0",
+		"es-abstract": "^1.19.1",
+		"fsevents": "^2.3.2",
+		"is-online": "^9.0.1",
+		"mocha": "^9.1.3",
+		"open": "^8.4.0",
+		"p-retry": "^4.6.1",
 		"request": "^2.88.0",
 		"request-promise-native": "^1.0.8",
-		"rimraf": "2.6.3",
-		"shelljs": "0.8.3",
-		"tslint": "5.16.0",
-		"typescript": "3.4.5",
-		"vscode-extension-telemetry": "^0.1.4",
-		"vscode-test": "^1.3.0"
+		"rimraf": "3.0.2",
+		"shelljs": "0.8.4",
+		"tslint": "5.20.1",
+		"typescript": "4.4.4",
+		"vscode-extension-telemetry": "^0.4.3",
+		"vscode-test": "^1.6.1"
 	},
 	"optionalDependencies": {
-		"fsevents": "^2.1.2"
+		"fsevents": "^2.3.2"
 	}
 }
