--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -78,31 +78,33 @@
 		"webpack": "webpack --mode development"
 	},
 	"dependencies": {
+		"child_process": "^1.0.2",
+		"diff": ">=5.0.0",
+		"hmac-drbg": "^1.0.1",
+		"is-online": "^9.0.1",
+		"open": "^8.4.0",
+		"rimraf": "3.0.2",
+		"shelljs": "^0.8.4",
+		"vscode-dotnet-runtime-library": "file:../vscode-dotnet-runtime-library"
+	},
+	"devDependencies": {
 		"@types/chai": "^4.2.22",
 		"@types/chai-as-promised": "^7.1.4",
 		"@types/mocha": "^9.0.0",
 		"@types/node": "16.11.7",
 		"@types/rimraf": "3.0.2",
+		"@types/source-map-support": "^0.5.4",
 		"@types/vscode": "^1.62.0",
 		"chai": "^4.3.4",
 		"chai-as-promised": "^7.1.1",
-		"child_process": "^1.0.2",
-		"diff": ">=5.0.0",
+		"copy-webpack-plugin": "^9.0.1",
 		"glob": "^7.2.0",
-		"hmac-drbg": "^1.0.1",
-		"is-online": "^9.0.1",
 		"mocha": "^9.1.3",
-		"open": "^8.4.0",
-		"rimraf": "3.0.2",
-		"shelljs": "^0.8.4",
+		"source-map-support": "0.5.21",
 		"ts-loader": "^9.2.6",
 		"tslint": "^5.20.1",
 		"typescript": "4.4.4",
-		"vscode-dotnet-runtime-library": "file:../vscode-dotnet-runtime-library",
-		"vscode-test": "^1.6.1"
-	},
-	"devDependencies": {
-		"copy-webpack-plugin": "^9.0.1",
+		"vscode-test": "^1.6.1",
 		"webpack": "5.63.0",
 		"webpack-cli": "4.9.1"
 	}
