--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -28,23 +28,22 @@
 		"@types/chai-as-promised": "^7.1.4",
 		"@types/mocha": "^9.0.0",
 		"@types/node": "16.11.7",
-		"@types/request-promise-native": "^1.0.18",
 		"@types/rimraf": "3.0.2",
 		"@types/semver": "^7.3.9",
 		"@types/shelljs": "0.8.9",
 		"@types/vscode": "^1.62.0",
+		"axios": "^0.26.1",
+		"axios-cache-interceptor": "^0.10.2",
+		"axios-retry": "^3.2.4",
 		"chai": "^4.3.4",
 		"chai-as-promised": "^7.1.1",
 		"diff": ">=5.0.0",
 		"eol": "^0.9.1",
 		"es-abstract": "^1.19.1",
-		"fsevents": "^2.3.2",
 		"is-online": "^9.0.1",
 		"mocha": "^9.1.3",
 		"open": "^8.4.0",
-		"p-retry": "^4.6.1",
 		"request": "^2.88.0",
-		"request-promise-native": "^1.0.8",
 		"rimraf": "3.0.2",
 		"shelljs": "0.8.4",
 		"tslint": "5.20.1",
