--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -42,10 +42,12 @@
 		"es-abstract": "^1.19.1",
 		"is-online": "^9.0.1",
 		"mocha": "^9.1.3",
+		"nyc": "^15.1.0",
 		"open": "^8.4.0",
 		"request": "^2.88.0",
 		"rimraf": "3.0.2",
 		"shelljs": "0.8.4",
+		"ts-node": "^10.7.0",
 		"tslint": "5.20.1",
 		"typescript": "4.4.4",
 		"vscode-extension-telemetry": "^0.4.3",
