Use windows latest instead of windows 2016 which is deprecated as of tmrw

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,7 +67,7 @@ stages:
   - job: TSLint
     displayName: 'TSLint'
     pool:
-      vmImage: 'vs2017-win2016'
+      vmImage: 'windows-latest'
     steps:
     - task: NodeTool@0
       inputs:
@@ -85,7 +85,7 @@ stages:
     - TSLint
     condition: and(succeeded(), notin(variables['Build.Reason'], 'PullRequest'))
     pool:
-      vmImage: 'vs2017-win2016'
+      vmImage: 'windows-latest'
     strategy:
       matrix:
         Runtime:
@@ -138,13 +138,13 @@ stages:
   # Note: This step requires approval, allows for manual smoke testing the artifact before release
   - deployment: Deploy
     pool:
-      vmImage: 'vs2017-win2016'
+      vmImage: 'windows-latest'
     environment: 'vscode-dotnetcore-extension-releases'
   ##### Determine version to publish #####
   - job: GetVersion
     displayName: 'Get Version'
     pool:
-      vmImage: 'vs2017-win2016'
+      vmImage: 'windows-latest'
     steps:
     - task: NodeTool@0
       inputs:
@@ -163,7 +163,7 @@ stages:
     - Deploy
     - GetVersion
     pool:
-      vmImage: 'vs2017-win2016'
+      vmImage: 'windows-latest'
     variables:
       version: $[ dependencies.GetVersion.outputs['GetVersion.version'] ]
     steps:
@@ -191,13 +191,13 @@ stages:
   # Note: This step requires approval, allows for manual smoke testing the artifact before release
   - deployment: Deploy
     pool:
-      vmImage: 'vs2017-win2016'
+      vmImage: 'windows-latest'
     environment: 'vscode-dotnetcore-extension-releases'
   ##### Determine version to publish #####
   - job: GetVersion
     displayName: 'Get Version'
     pool:
-      vmImage: 'vs2017-win2016'
+      vmImage: 'windows-latest'
     steps:
     - task: NodeTool@0
       inputs:
@@ -216,7 +216,7 @@ stages:
     - Deploy
     - GetVersion
     pool:
-      vmImage: 'vs2017-win2016'
+      vmImage: 'windows-latest'
     variables:
       version: $[ dependencies.GetVersion.outputs['GetVersion.version'] ]
     steps:
