--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,6 +74,7 @@ stages:
         versionSpec: '15.x'
       displayName: 'Install Node.js'
     - bash: |
+        npm install -g vsts-npm-auth --registry https://registry.npmjs.com --always-auth false
         vsts-npm-auth -config .npmrc
         npm install -g tslint
         npm run lint
