[DEBUG] Add verbosity to vsts to debug why tslint is not timing out or getting auth token when it works on local but not on pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,7 +75,7 @@ stages:
       displayName: 'Install Node.js'
     - bash: |
         npm install -g vsts-npm-auth --registry https://registry.npmjs.com --always-auth false
-        vsts-npm-auth -config .npmrc
+        vsts-npm-auth -config .npmrc -V Detailed -N
         npm install -g tslint
         npm run lint
       displayName: Run Lint
