[DEBUG] TS lint use searching to find path

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,6 +74,9 @@ stages:
         versionSpec: '15.x'
       displayName: 'Install Node.js'
     - bash: |
+        find .
+        ls
+        echo "$PWD"
         npm install -g vsts-npm-auth --registry https://registry.npmjs.com --always-auth false
         vsts-npm-auth -config .npmrc -V Detailed -N
         npm install -g tslint
