--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,8 +74,7 @@ stages:
         versionSpec: '15.x'
       displayName: 'Install Node.js'
     - bash: |
-        npm install vsts-npm-auth --registry https://registry.npmjs.org
-        npm vsts-npm-auth -config .npmrc -V Detailed -N
+        npm cache clean --force
         npm install --location=global tslint
         npm run lint
       displayName: Run Lint
