--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,6 +75,7 @@ stages:
       displayName: 'Install Node.js'
     - bash: |
         npm cache clean --force
+        git clean -fxd
         npm install --location=global tslint
         npm run lint
       displayName: Run Lint
