Try using authenticate task

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,16 +69,12 @@ stages:
     pool:
       vmImage: 'windows-latest'
     steps:
-    - task: NodeTool@0
-      inputs:
-        versionSpec: '15.x'
-      displayName: 'Install Node.js'
-    - bash: |
-        npm cache clean --force
-        git clean -fxd
-        npm install --location=global tslint
-        npm run lint
-      displayName: Run Lint
+    - task: npmAuthenticate@0
+    inputs:
+      workingFile: .npmrc
+      displayName: 'Authenticate NPM'
+    - script: npm install tslint 
+    - script: npm run lint
   ##### Package and Publish #####
   - job: Package
     displayName: 'Package and Publish'
