Add tslint to the description of build task (mostly to cause pipeline to run)

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,7 +72,7 @@ stages:
     - task: npmAuthenticate@0
       inputs:
         workingFile: .npmrc
-        displayName: 'Authenticate NPM'
+        displayName: 'Authenticate NPM and Run Lint'
     - script: npm install tslint 
     - script: npm run lint
   ##### Package and Publish #####
