Try authenticating before build.cmd or .sh is called

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,6 +40,9 @@ stages:
         versionSpec: '15.x'
         workingFile: .npmrc
       displayName: 'Install Node.js'
+    - script: npm install
+    - script: npm install vsts-npm-auth
+    - script: vsts-npm-auth -config .npmrc
     - script: build.cmd
       displayName: Build Windows
       condition: eq(variables['Agent.OS'], 'Windows_NT')
