Stop floating vscode package refs
When building against @types/vscode 1.69.0, we got

```
src/test/mocks/MockEnvironmentVariableCollection.ts:8:14 - error TS2420: Class 'MockEnvironmentVariableCollection' incorrectly implements interface 'EnvironmentVariableCollection'.
```

Pin to the old working version.

--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -16,7 +16,7 @@
 	"version": "1.6.0",
 	"publisher": "ms-dotnettools",
 	"engines": {
-		"vscode": "^1.62.0"
+		"vscode": "1.62.0"
 	},
 	"categories": [
 		"Other"
@@ -103,7 +103,7 @@
 		"@types/mocha": "^9.0.0",
 		"@types/node": "16.11.7",
 		"@types/rimraf": "3.0.2",
-		"@types/vscode": "^1.62.0",
+		"@types/vscode": "1.62.0",
 		"copy-webpack-plugin": "9.0.1",
 		"webpack": "5.63.0",
 		"webpack-cli": "4.9.1"
