--- a/sample/package.json
+++ b/sample/package.json
@@ -10,7 +10,7 @@
 	"version": "0.0.1",
 	"publisher": "ms-dotnettools",
 	"engines": {
-		"vscode": "^1.62.0"
+		"vscode": "1.62.0"
 	},
 	"categories": [
 		"Other"
@@ -101,7 +101,7 @@
 		"@types/mocha": "^9.0.0",
 		"@types/node": "16.11.7",
 		"@types/rimraf": "3.0.2",
-		"@types/vscode": "^1.62.0",
+		"@types/vscode": "1.62.0",
 		"mocha": "^9.1.3",
 		"rimraf": "3.0.2",
 		"tslint": "5.20.1",
