--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -8,7 +8,7 @@
 	},
 	"license": "MIT",
 	"engines": {
-		"vscode": "^1.62.0"
+		"vscode": "1.62.0"
 	},
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
@@ -32,7 +32,7 @@
 		"@types/rimraf": "3.0.2",
 		"@types/semver": "^7.3.9",
 		"@types/shelljs": "0.8.9",
-		"@types/vscode": "^1.62.0",
+		"@types/vscode": "1.62.0",
 		"chai": "^4.3.4",
 		"chai-as-promised": "^7.1.1",
 		"diff": ">=5.0.0",
