--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -16,7 +16,7 @@
 	"version": "0.9.0",
 	"publisher": "ms-dotnettools",
 	"engines": {
-		"vscode": "^1.62.0"
+		"vscode": "1.62.0"
 	},
 	"preview": true,
 	"categories": [
@@ -83,7 +83,7 @@
 		"@types/mocha": "^9.0.0",
 		"@types/node": "16.11.7",
 		"@types/rimraf": "3.0.2",
-		"@types/vscode": "^1.62.0",
+		"@types/vscode": "1.62.0",
 		"chai": "^4.3.4",
 		"chai-as-promised": "^7.1.1",
 		"child_process": "^1.0.2",
