--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,7 +74,7 @@ stages:
         versionSpec: '15.x'
       displayName: 'Install Node.js'
     - bash: |
-        npm install -g tslint
+        npm install -g tslint --verbose
         npm run lint
       displayName: Run Lint
   ##### Package and Publish #####
