Revert "fixup! comment out other stuff"
This reverts commit b02295802822e73e3a6740c8032bfb142332f10a.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,8 +19,8 @@ variables:
 
 stages:
 ##### Test and Build #####
-- stage: Build
-  jobs:
+# - stage: Build
+#   jobs:
 #   ##### Build #####
 #   - job: Build
 #     displayName: 'Build and Test'
