--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -96,7 +96,8 @@
 		"tslint": "^5.20.1",
 		"typescript": "4.4.4",
 		"vscode-dotnet-runtime-library": "file:../vscode-dotnet-runtime-library",
-		"vscode-test": "^1.6.1"
+		"vscode-test": "^1.6.1",
+		"yarn": "^1.22.19"
 	},
 	"devDependencies": {
 		"@types/chai": "4.2.22",
